TASQ-319/1 : Redesign task details page to finnaly use bootstrap instead of table-cell + Fix  current time not updaing on task details + Fix wrong ID passed on sub task creation to getDefaults + Fix wrong scalling on mobile devices

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -1,11 +1,13 @@
 .white-frame {
     border: 1px solid lightgray;
-    margin-bottom: 10px;
-    /* 	border-radius: 5px; */
     padding: 10px;
     margin: 10px auto;
     background: white;
 }
+.white-frame.sidepadded{
+    padding: 10px 25px;
+}
+
 
 .hidden {
     visibility: hidden;
@@ -165,12 +167,15 @@ a.filter{
     display: inline;
     cursor: pointer;
 }
+.bold{
+    font-weight: bold;
+}
 
 table.togglerContent {
     width: 100%;
 }
 
-.left-margin {
+.paddingleft_20 {
     padding-left: 20px;
 }
 
@@ -190,6 +195,10 @@ table.togglerContent {
 .margintop_20{
     margin-top: 20px;
 }
+.marginLeft_20{
+    margin-left: 20px;
+}
+
 
 .table_state {
     margin: 10px;
